refactor: refactor return functions
Refactorized some functions where the returns weren't needed and only added some redundancy